Bug 1760025 - Use temporary files for attached messages and attachments from other messages. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D141807

--HG--
extra : amend_source : 641e73fe7046f146d040d3a109a407c699acfe41